replace Mockito with MockK